[tool.poetry]
name = "Neural Decoding"
version = "0.1.2.dev"
description = "A python package that includes many methods for decoding neural activity."
authors = ["Josh Glaser <joshglaser88@gmail.com>"]
license = "BSD 3-Clause License"
readme = "README.md"
homepage = "https://github.com/KordingLab/Neural_Decoding"
repository = "https://github.com/KordingLab/Neural_Decoding"
keywords = ["neural decoding", "science", "research"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
packages = [
    { include = "Neural_Decoding" }
]

[tool.poetry.dependencies]
python = "^3.8"  # specify your python version
numpy = "^1.16.3"
scipy = "*"
ipykernel = "*"
statsmodels = "*"  # For Naive Bayes Decoder
scikit-learn = "*"  # For Wiener Filter, Wiener Cascade Decoders, and OneHotEncoder
xgboost = "*"  # For xgboost decoder
keras = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
